2008-10-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/vfs.c: Make use of CONST86 for 8.6a3 support.

2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* http2.6/http.tcl: Merged zlib crc fix from Tcl.

2008-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:  Updated the NMAKE build files.
	* win/rules.vc:
	* win/nmakehlp.c:

2008-04-15  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl.in: Updated to handle the new files, and
	* Makefile.in: sync'd generated index with manual one.

	* library/pkgIndex.tcl: Moved the backward compatibility package
	* library/mkvfs.tcl: names (mk4vfs, zipvfs) into separate files,
	* library/zipvfs.tcl: as true packages. They properly load the new
	* library/mk4vfscompat.tcl: packages. The mess with one file
	* library/zipvfscompat.tcl: annoncing itself as two packages has
	been removed. Patchlevels bumped (1.10.1, 1.0.1 respectively),
	considering it as bug fix.

2008-04-11  Andreas Kupries  <andreask@activestate.com>

	* library/pkgIndex.tcl: Bumped version of starkit to 1.3.2. We
	* library/starkit.tcl: should have done that when we synchronized
	* pkgIndex.tcl.in: the mismatched version on 2005-11-09 anyway,
	because it was a bugfix, with attendant change to the version
	number. Without this bump we now have 1.3.1 floating around in two
	variants, i.e. it may or may not be mismatched with its package
	index, and the two variants cannot be distinguished. By bumping
	the patchlevel the correct version would have been easy to
	distinguish. Now it will.

2008-04-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* configure:    If building static then do not define USE_TCL_STUBS
	* configure.in: (needed to link tclkit with 8.6)

2008-03-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* http2.6/http.tcl, http2.6/pkgIndex.tcl: merge with tcl cvs 2.7
	http changes, change this version to 2.6.8.

2008-03-10  Jeff Hobbs  <jeffh@ActiveState.com>
